Library is now capable of opening and getting information about the files within
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@8 80473309-fabf-408f-887a-d98baf40245d

--- a/libbarn/makefile
+++ b/libbarn/makefile
@@ -1,6 +1,6 @@
 COMPILER = g++
 LINKER = g++
-COMPILER_FLAGS = -fPIC -Iinclude
+COMPILER_FLAGS = -fPIC -Iinclude -Wall
 LINKER_FLAGS = -shared
 EXECUTABLE = libbarn.so
 
