Added some event handlers to WinForms client
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@24 80473309-fabf-408f-887a-d98baf40245d

--- a/browser/browser.csproj
+++ b/browser/browser.csproj
@@ -31,7 +31,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainForm_win.cs" />
+    <Compile Include="MainForm_win.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MainForm_win.Designer.cs">
       <DependentUpon>MainForm_win.cs</DependentUpon>
     </Compile>
