updated barn.cs (libbarn wrapper)
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@34 80473309-fabf-408f-887a-d98baf40245d

--- a/browser/browser.csproj
+++ b/browser/browser.csproj
@@ -43,6 +43,7 @@
     <Compile Include="barnmanager.cs" />
     <EmbeddedResource Include="MainForm_win.resx">
       <DependentUpon>MainForm_win.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
