--- a/levelviewer/gk3levelviewer.csproj
+++ b/levelviewer/gk3levelviewer.csproj
@@ -30,12 +30,14 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Tao.OpenGl, Version=2.1.0.4, Culture=neutral, PublicKeyToken=1ca010269a4501ef, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\Program Files\Tao\bin\Tao.OpenGl.dll</HintPath>
     </Reference>
-    <Reference Include="Tao.Sdl, Version=1.2.8.1, Culture=neutral, PublicKeyToken=9c7a200e36c0094e" />
+    <Reference Include="Tao.Sdl, Version=1.2.11.1, Culture=neutral, PublicKeyToken=9c7a200e36c0094e, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="barn.cs" />
@@ -52,8 +54,20 @@
     <Compile Include="Resource\ResourceManager.cs" />
     <Compile Include="Resource\TextResource.cs" />
     <Compile Include="Graphics\TextureResource.cs" />
+    <Compile Include="SceneChooser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SceneChooser.Designer.cs">
+      <DependentUpon>SceneChooser.cs</DependentUpon>
+    </Compile>
     <Compile Include="SceneManager.cs" />
     <Compile Include="Utils.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SceneChooser.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>SceneChooser.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
