--- a/levelviewer/gk3levelviewer.csproj
+++ b/levelviewer/gk3levelviewer.csproj
@@ -5,7 +5,7 @@
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{B04C984F-A75C-49D9-B3EF-0C246DEF81B5}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>gk3levelviewer</RootNamespace>
     <AssemblyName>gk3levelviewer</AssemblyName>
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="barn.cs" />
+    <Compile Include="Game\SifResource.cs" />
     <Compile Include="Graphics\BspResource.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="FileSystem.cs" />
@@ -54,6 +55,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Graphics\LightmapResource.cs" />
+    <Compile Include="Resource\InfoResource.cs" />
     <Compile Include="Resource\ResourceManager.cs" />
     <Compile Include="Resource\TextResource.cs" />
     <Compile Include="Graphics\TextureResource.cs" />
@@ -64,6 +66,7 @@
       <DependentUpon>SceneChooser.cs</DependentUpon>
     </Compile>
     <Compile Include="SceneManager.cs" />
+    <Compile Include="Sheep\Sheep.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
