--- a/levelviewer/Viewer/Viewer.csproj
+++ b/levelviewer/Viewer/Viewer.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{52111C1E-29DC-4B2F-9404-A59CE1F29344}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Viewer2</RootNamespace>
-    <AssemblyName>Viewer2</AssemblyName>
+    <RootNamespace>Viewer</RootNamespace>
+    <AssemblyName>GK3Viewer</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
