Fixed some g++ compile problems
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@65 80473309-fabf-408f-887a-d98baf40245d

--- a/sheep/makefile
+++ b/sheep/makefile
@@ -1,13 +1,14 @@
 CC=gcc
 CPPC=g++
+FLAGS= -g
 EXECUTABLE=parser
 
 $(EXECUTABLE):
 	flex -i sheep.l
 	bison -y -d sheep.y
-	$(CC) -c lex.yy.c -o lex.yy.o
-	$(CC) -c y.tab.c -o y.tab.o
-	$(CPPC) symbols.cpp main.cpp compiler.cpp lex.yy.o y.tab.o -o $(EXECUTABLE)
+	$(CC) $(FLAGS) -c lex.yy.c -o lex.yy.o
+	$(CC) $(FLAGS) -c y.tab.c -o y.tab.o
+	$(CPPC) $(FLAGS) symbols.cpp main.cpp compiler.cpp disassembler.cpp sheepwriter.cpp lex.yy.o y.tab.o -o $(EXECUTABLE)
 	
 clean:
 	rm $(EXECUTABLE)
