added basic model support to viewer
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@68 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main.csproj
+++ b/levelviewer/Main/Main.csproj
@@ -44,8 +44,10 @@
     <Compile Include="Graphics\BspResource.cs" />
     <Compile Include="Graphics\Camera.cs" />
     <Compile Include="Graphics\LightmapResource.cs" />
+    <Compile Include="Graphics\ModelResource.cs" />
     <Compile Include="Graphics\TextureResource.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="Math\Matrix.cs" />
     <Compile Include="Math\Quaternion.cs" />
     <Compile Include="Math\Vector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
