Updated Mono makefile
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@72 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Viewer/makefile.mono
+++ b/levelviewer/Viewer/makefile.mono
@@ -2,7 +2,7 @@ COMPILER = gmcs
 COMPILER_FLAGS = -r:System.Windows.Forms -r:System.Drawing -r:Tao.OpenGl -r:Tao.Sdl -r:main.dll
 EXECUTABLE = viewer.exe
 
-SOURCES = Program.cs Input.cs SceneChooser.cs SceneChooser.Designer.cs Graphics/Graphics.cs
+SOURCES = Program.cs MainForm.cs MainForm.Designer.cs SearchPathEditor.cs SearchPathEditor.Designer.cs SceneChooser.cs SceneChooser.Designer.cs Console.cs Console.Designer.cs Video.cs
 
 $(EXECUTABLE):
 	cp ../Main/main.dll .
