--- a/sheep/makefile
+++ b/sheep/makefile
@@ -8,7 +8,7 @@ $(EXECUTABLE):
 	bison -y -d sheep.y
 	$(CC) $(FLAGS) -c lex.yy.c -o lex.yy.o
 	$(CC) $(FLAGS) -c y.tab.c -o y.tab.o
-	$(CPPC) $(FLAGS) symbols.cpp main.cpp compiler.cpp disassembler.cpp sheepwriter.cpp lex.yy.o y.tab.o -o $(EXECUTABLE)
+	$(CPPC) $(FLAGS) sheepc.cpp symbols.cpp main.cpp compiler.cpp disassembler.cpp sheepwriter.cpp lex.yy.o y.tab.o -o $(EXECUTABLE)
 	
 clean:
 	rm $(EXECUTABLE)
