--- a/sheep/makefile2
+++ b/sheep/makefile2
@@ -6,7 +6,7 @@ EXECUTABLE=parser
 $(EXECUTABLE):
 	bison -o sheepParser.cpp -d sheepParser.y
 	flex -o sheepScanner.cpp sheepScanner.l
-	$(CPPC) $(FLAGS) sheepMain.cpp sheepCodeTree.cpp sheepParser.cpp sheepScanner.cpp -o $(EXECUTABLE)
+	$(CPPC) $(FLAGS) sheepMain.cpp sheepCodeTree.cpp sheepCodeGenerator.cpp sheepFileWriter.cpp sheepParser.cpp sheepScanner.cpp -o $(EXECUTABLE)
 	
 clean:
 	rm $(EXECUTABLE)
