Got C interface to sheep compiler/virtual machine working
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@94 80473309-fabf-408f-887a-d98baf40245d

--- a/sheep/makefile-library
+++ b/sheep/makefile-library
@@ -1,9 +1,9 @@
 CC=gcc
 CPPC=g++
 LINKER=g++
-COMPILER_FLAGS= -g
-LINKER_FLAGS=
-EXECUTABLE=parser
+COMPILER_FLAGS= -g -fPIC
+LINKER_FLAGS=-shared -Wl
+EXECUTABLE=libsheepc.so
 
 SOURCES = sheepScanner.cpp sheepParser.cpp sheepCodeGenerator.cpp sheepCodeTree.cpp sheepFileWriter.cpp sheepMachine.cpp sheepMain.cpp sheepCompiler.cpp
 OBJECTS = $(SOURCES:.cpp=.o)
