added option for 2x lightmaps (like GK3 does); fixed alpha testing
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@100 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main.csproj
+++ b/levelviewer/Main/Main.csproj
@@ -38,6 +38,7 @@
     <Compile Include="FileSystem\barn.cs" />
     <Compile Include="FileSystem\FileSystem.cs" />
     <Compile Include="Game\CommonStrings.cs" />
+    <Compile Include="Game\GameManager.cs" />
     <Compile Include="Game\SceneManager.cs" />
     <Compile Include="Game\ScnResource.cs" />
     <Compile Include="Game\SifResource.cs" />
