updated viewer to work (somewhat) on Linux
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@101 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Viewer/makefile.mono
+++ b/levelviewer/Viewer/makefile.mono
@@ -1,8 +1,8 @@
 COMPILER = gmcs
-COMPILER_FLAGS = -r:System.Windows.Forms -r:System.Drawing -r:Tao.OpenGl -r:Tao.Sdl -r:main.dll
+COMPILER_FLAGS = -r:Tao.OpenGl -r:Tao.Sdl -r:main.dll
 EXECUTABLE = viewer.exe
 
-SOURCES = Program.cs MainForm.cs MainForm.Designer.cs SearchPathEditor.cs SearchPathEditor.Designer.cs SceneChooser.cs SceneChooser.Designer.cs Console.cs Console.Designer.cs Video.cs
+SOURCES = MonoMain.cs
 
 $(EXECUTABLE):
 	cp ../Main/main.dll .
