animated cursors work; improved sif loader
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@108 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main.csproj
+++ b/levelviewer/Main/Main.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Game\CommonStrings.cs" />
     <Compile Include="Game\CursorResource.cs" />
     <Compile Include="Game\GameManager.cs" />
+    <Compile Include="Game\NvcResource.cs" />
     <Compile Include="Game\SceneManager.cs" />
     <Compile Include="Game\ScnResource.cs" />
     <Compile Include="Game\SifResource.cs" />
