added basic Font support to Viewer
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@113 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main.csproj
+++ b/levelviewer/Main/Main.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Graphics\LightmapResource.cs" />
     <Compile Include="Graphics\ModelResource.cs" />
     <Compile Include="Graphics\TextureResource.cs" />
+    <Compile Include="Graphics\Utils.cs" />
+    <Compile Include="Gui\Font.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Math\Matrix.cs" />
     <Compile Include="Math\Quaternion.cs" />
