--- a/levelviewer/Game/Game.csproj
+++ b/levelviewer/Game/Game.csproj
@@ -35,6 +35,7 @@
     <Reference Include="Tao.Sdl, Version=1.2.11.1, Culture=neutral, PublicKeyToken=9c7a200e36c0094e, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MainMenu.cs" />
     <Compile Include="MonoMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
