--- a/levelviewer/Main/Main.csproj
+++ b/levelviewer/Main/Main.csproj
@@ -50,7 +50,9 @@
     <Compile Include="Graphics\ModelResource.cs" />
     <Compile Include="Graphics\TextureResource.cs" />
     <Compile Include="Graphics\Utils.cs" />
+    <Compile Include="Gui\Button.cs" />
     <Compile Include="Gui\Font.cs" />
+    <Compile Include="Gui\Unit.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Math\Matrix.cs" />
     <Compile Include="Math\Quaternion.cs" />
