--- a/levelviewer/Viewer/Viewer.csproj
+++ b/levelviewer/Viewer/Viewer.csproj
@@ -65,6 +65,10 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="ResourceViewer.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>ResourceViewer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SceneChooser.resx">
       <DependentUpon>SceneChooser.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -86,6 +90,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="ResourceViewer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ResourceViewer.Designer.cs">
+      <DependentUpon>ResourceViewer.cs</DependentUpon>
     </Compile>
     <Compile Include="SceneChooser.cs">
       <SubType>Form</SubType>
