--- a/sheep/makefile-library
+++ b/sheep/makefile-library
@@ -5,7 +5,7 @@ COMPILER_FLAGS= -g -fPIC
 LINKER_FLAGS=-shared -Wl
 EXECUTABLE=libsheepc.so
 
-SOURCES = sheepScanner.cpp sheepParser.cpp sheepCodeGenerator.cpp sheepCodeTree.cpp sheepFileWriter.cpp sheepMachine.cpp sheepMain.cpp sheepCompiler.cpp
+SOURCES = sheepScanner.cpp sheepParser.cpp sheepCodeGenerator.cpp sheepCodeTree.cpp sheepFileWriter.cpp sheepMachine.cpp sheepMain.cpp sheepCompiler.cpp sheepDisassembler.cpp
 OBJECTS = $(SOURCES:.cpp=.o)
 
 $(EXECUTABLE): $(OBJECTS)
