loading search path from settings; removing item from search path
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@125 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Viewer/Viewer.csproj
+++ b/levelviewer/Viewer/Viewer.csproj
@@ -82,7 +82,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
@@ -108,6 +113,11 @@
     </Compile>
     <Compile Include="SearchPathEditor.Designer.cs">
       <DependentUpon>SearchPathEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Video.cs" />
   </ItemGroup>
