Updated Mono makefiles
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@139 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Game/makefile.mono
+++ b/levelviewer/Game/makefile.mono
@@ -2,7 +2,7 @@ COMPILER = gmcs
 COMPILER_FLAGS = -r:Tao.OpenGl -r:Tao.Sdl -r:main.dll
 EXECUTABLE = viewer.exe
 
-SOURCES = MonoMain.cs
+SOURCES = MonoMain.cs MainMenu.cs
 
 $(EXECUTABLE):
 	cp ../Main/main.dll .
