--- a/levelviewer/Main/makefile.mono
+++ b/levelviewer/Main/makefile.mono
@@ -1,14 +1,16 @@
 COMPILER = gmcs
-COMPILER_FLAGS = -r:Tao.OpenGl -target:library
+COMPILER_FLAGS = -d:SOUND_DISABLED -r:Tao.OpenGl -target:library
 EXECUTABLE = main.dll
 
 FILESYSTEM_SOURCES = FileSystem/barn.cs FileSystem/FileSystem.cs
 RESOURCE_SOURCES = Resource/InfoResource.cs Resource/TextResource.cs Resource/ResourceManager.cs
 MATH_SOURCES = Math/Quaternion.cs Math/Vector.cs Math/Matrix.cs
-GAME_SOURCES = Game/SceneManager.cs Game/ScnResource.cs Game/SifResource.cs Game/NvcResource.cs Game/CursorResource.cs
-GRAPHICS_SOURCES = Graphics/BspResource.cs Graphics/Camera.cs Graphics/LightmapResource.cs Graphics/TextureResource.cs Graphics/ModelResource.cs
+GAME_SOURCES = Game/SceneManager.cs Game/ScnResource.cs Game/SifResource.cs Game/NvcResource.cs
+GRAPHICS_SOURCES = Graphics/BspResource.cs Graphics/Camera.cs Graphics/LightmapResource.cs Graphics/TextureResource.cs Graphics/ModelResource.cs Graphics/Utils.cs
+GUI_SOURCES = Gui/Button.cs Gui/CursorResource.cs Gui/Font.cs Gui/Unit.cs
+SOUND_SOURCES = Sound/Sound.cs Sound/SoundManager.cs
 SHEEP_SOURCES = Sheep/Sheep.cs Sheep/BasicSheepFunctions.cs
-SOURCES = Utils.cs Logger.cs Console.cs Game/GameManager.cs Game/CommonStrings.cs $(SHEEP_SOURCES) $(FILESYSTEM_SOURCES) $(RESOURCE_SOURCES) $(MATH_SOURCES) $(GAME_SOURCES) $(GRAPHICS_SOURCES)
+SOURCES = Utils.cs Logger.cs Console.cs Game/GameManager.cs Game/CommonStrings.cs $(SHEEP_SOURCES) $(FILESYSTEM_SOURCES) $(RESOURCE_SOURCES) $(MATH_SOURCES) $(GAME_SOURCES) $(SOUND_SOURCES) $(GRAPHICS_SOURCES) $(GUI_SOURCES)
 
 $(EXECUTABLE):
 	$(COMPILER) $(COMPILER_FLAGS) $(SOURCES) -out:$(EXECUTABLE)
