--- a/levelviewer/Game/Game.csproj
+++ b/levelviewer/Game/Game.csproj
@@ -54,6 +54,7 @@
     <Compile Include="MainMenu.cs" />
     <Compile Include="MonoMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimeBlockSplash.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Main\Main.csproj">
