--- a/levelviewer/Main/Main.csproj
+++ b/levelviewer/Main/Main.csproj
@@ -30,7 +30,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x86\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;SOUND_DISABLED</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
@@ -90,6 +90,7 @@
     <Compile Include="Sheep\Sheep.cs" />
     <Compile Include="Sound\Sound.cs" />
     <Compile Include="Sound\SoundManager.cs" />
+    <Compile Include="Sound\SoundTrackResource.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
