--- a/levelviewer/Game/Game2008.csproj
+++ b/levelviewer/Game/Game2008.csproj
@@ -61,6 +61,7 @@
     <Compile Include="MonoMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeBlockSplash.cs" />
+    <Compile Include="VerbPickerManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Main\Main.csproj">
