--- a/levelviewer/Main/Main2008.csproj
+++ b/levelviewer/Main/Main2008.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Game\ScnResource.cs" />
     <Compile Include="Game\SifResource.cs" />
     <Compile Include="Game\YakResource.cs" />
+    <Compile Include="Graphics\BoundingBoxRenderer.cs" />
     <Compile Include="Graphics\BoundingSphereRenderer.cs" />
     <Compile Include="Graphics\BspResource.cs" />
     <Compile Include="Graphics\Camera.cs" />
