fixed bug when multiple verb buttons showed up
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@181 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2008.csproj
+++ b/levelviewer/Main/Main2008.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Gui\CursorResource.cs" />
     <Compile Include="Gui\Font.cs" />
     <Compile Include="Gui\Unit.cs" />
+    <Compile Include="Gui\VerbButton.cs" />
     <Compile Include="Gui\VerbButtonSet.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Math\Constants.cs" />
