fix VS2005 project file
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@182 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main.csproj
+++ b/levelviewer/Main/Main.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Game\ScnResource.cs" />
     <Compile Include="Game\SifResource.cs" />
     <Compile Include="Game\YakResource.cs" />
+    <Compile Include="Graphics\BoundingBoxRenderer.cs" />
     <Compile Include="Graphics\BoundingSphereRenderer.cs" />
     <Compile Include="Graphics\BspResource.cs" />
     <Compile Include="Graphics\Camera.cs" />
@@ -81,6 +82,7 @@
     <Compile Include="Gui\CursorResource.cs" />
     <Compile Include="Gui\Font.cs" />
     <Compile Include="Gui\Unit.cs" />
+    <Compile Include="Gui\VerbButton.cs" />
     <Compile Include="Gui\VerbButtonSet.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Math\Constants.cs" />
