update Sheep project files
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@188 80473309-fabf-408f-887a-d98baf40245d

--- a/sheep/sheep.vcproj
+++ b/sheep/sheep.vcproj
@@ -346,6 +346,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\sheepFileReader.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\sheepFileWriter.cpp"
 				>
 			</File>
@@ -389,6 +393,10 @@
 			</File>
 			<File
 				RelativePath=".\sheepDisassembler.h"
+				>
+			</File>
+			<File
+				RelativePath=".\sheepFileReader.h"
 				>
 			</File>
 			<File
