compiler supports identifiers with underscores in the name
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@193 80473309-fabf-408f-887a-d98baf40245d

--- a/sheep/makefile
+++ b/sheep/makefile
@@ -5,7 +5,7 @@ COMPILER_FLAGS= -g
 LINKER_FLAGS=
 EXECUTABLE=parser
 
-SOURCES = sheepScanner.cpp sheepParser.cpp sheepCodeGenerator.cpp sheepCodeTree.cpp sheepFileWriter.cpp sheepMachine.cpp sheepMain.cpp sheepCompiler.cpp sheepDisassembler.cpp
+SOURCES = sheepScanner.cpp sheepParser.cpp sheepCodeGenerator.cpp sheepCodeTree.cpp sheepFileWriter.cpp sheepFileReader.cpp sheepMachine.cpp sheepMain.cpp sheepCompiler.cpp sheepDisassembler.cpp
 OBJECTS = $(SOURCES:.cpp=.o)
 
 $(EXECUTABLE): $(OBJECTS)
