--- a/levelviewer/Main/Main2008.csproj
+++ b/levelviewer/Main/Main2008.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{CC878405-3C13-4940-A18C-9C035E91311C}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -52,7 +52,7 @@
   <ItemGroup>
     <Reference Include="irrKlang.NET2.0, Version=1.1.3.0, Culture=neutral, PublicKeyToken=a854741bd80517c7, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Documents and Settings\brad.farris\My Documents\irrklang\irrKlang.NET2.0.dll</HintPath>
+      <HintPath>..\..\..\Users\bfarris\Documents\code\irrklang\irrKlang-1.1.3\bin\dotnet-2.0\irrKlang.NET2.0.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -67,6 +67,7 @@
     <Compile Include="Game\CommonStrings.cs" />
     <Compile Include="Game\GameManager.cs" />
     <Compile Include="Game\GameTimer.cs" />
+    <Compile Include="Game\HelperIcons.cs" />
     <Compile Include="Game\NvcResource.cs" />
     <Compile Include="Game\SceneManager.cs" />
     <Compile Include="Game\ScnResource.cs" />
@@ -121,6 +122,9 @@
     <Content Include="Shaders\wireframe.fx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Shaders\texturedBillboard.fx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Shaders\2d.fx">
@@ -128,12 +132,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Shaders\skybox.fx">
+    <Content Include="Icons\camera.bmp">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Shaders\texturedBillboard.fx">
+    <Content Include="Shaders\skybox.fx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
