--- a/launcher/Gk3Launcher.vcproj
+++ b/launcher/Gk3Launcher.vcproj
@@ -60,7 +60,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="D3D9.lib"
+				AdditionalDependencies="D3D9.lib ComCtl32.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -134,7 +134,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="D3D9.lib"
+				AdditionalDependencies="D3D9.lib ComCtl32.lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
