added Slovenian localization to browser
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@223 80473309-fabf-408f-887a-d98baf40245d

--- a/browser/browser.csproj
+++ b/browser/browser.csproj
@@ -78,6 +78,9 @@
       <SubType>Designer</SubType>
       <DependentUpon>About.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Strings.sl-SI.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Strings.ru-RU.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
