--- a/sheep/sheep_test/sheep_test.vcproj
+++ b/sheep/sheep_test/sheep_test.vcproj
@@ -175,7 +175,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\main.cpp"
+				RelativePath=".\runner.cpp"
 				>
 			</File>
 		</Filter>
@@ -184,6 +184,14 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\IdentifierTests.h"
+				>
+			</File>
+			<File
+				RelativePath=".\OperatorTests.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
