--- a/sheep/sheep_test/sheep_test.vcproj
+++ b/sheep/sheep_test/sheep_test.vcproj
@@ -185,6 +185,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\CommentTests.h"
+				>
+			</File>
+			<File
 				RelativePath=".\IdentifierTests.h"
 				>
 			</File>
