added memory auditing; fixed several memory leaks
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@227 80473309-fabf-408f-887a-d98baf40245d

--- a/sheep/sheep2008.vcproj
+++ b/sheep/sheep2008.vcproj
@@ -357,6 +357,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\sheepMemoryAllocator.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\sheepParser.cpp"
 				>
 			</File>
@@ -412,6 +416,10 @@
 			</File>
 			<File
 				RelativePath=".\sheepMachine.h"
+				>
+			</File>
+			<File
+				RelativePath=".\sheepMemoryAllocator.h"
 				>
 			</File>
 			<File
