added identifier length tests
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@230 80473309-fabf-408f-887a-d98baf40245d

--- a/sheep/sheep_test/sheep_test.vcproj
+++ b/sheep/sheep_test/sheep_test.vcproj
@@ -189,6 +189,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\DeclarationTests.h"
+				>
+			</File>
+			<File
 				RelativePath=".\IdentifierTests.h"
 				>
 			</File>
