--- a/sheep/sheep2008.vcproj
+++ b/sheep/sheep2008.vcproj
@@ -387,6 +387,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\sheepCodeBuffer.h"
+				>
+			</File>
+			<File
 				RelativePath=".\sheepCodeGenerator.h"
 				>
 			</File>
