getting ready for release
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@247 80473309-fabf-408f-887a-d98baf40245d

--- a/sheep/sheep.vcproj
+++ b/sheep/sheep.vcproj
@@ -358,6 +358,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\sheepMemoryAllocator.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\sheepParser.cpp"
 				>
 			</File>
