--- a/sheep/sheepc.vcproj
+++ b/sheep/sheepc.vcproj
@@ -364,6 +364,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\sheepMemoryAllocator.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\sheepParser.cpp"
 				>
 			</File>
